  * 90-update-alternatives: use wm-ng as default x-window-manager.
    [Closes: issue716]
  * Provide information about grml-live version and Debian/suite
    through /etc/grml_live_version in the generated ISO. [Closes: issue637]
  * grml-cheatcodes: document bootoption 'nostartx'.
  * Check for existence of $target/etc/apt/important_note.txt before
    operating on it.

 -- Michael Prokop <mika@grml.org>  Wed, 05 Aug 2009 16:44:16 +0200

grml-live (0.9.20) unstable; urgency=low

  * Add gnupg2 to GRML_FULL. Thanks to Walter Haidinger.
  * Drop all references to xserver-xorg-input-elo2300 (see #527699).
  * Cleanups in GRML_FULL:
    - Drop cheops (depends on libgtk1.2).
    - Drop dviutils ("Note: selecting "texlive-extra-utils" instead of the
      virtual package "dviutils" -> non-existing package)
    - Drop ext2resize (see #400797).
    - Drop fcoretools (see #534542).
    - Drop gdk-imlib11 (see #522810).
    - Drop gqcam (still depends on gtk1.2).
    - Drop hping2 (hping3 is available in all relevant Debian releases
      nowadays, see #533275).
    - Drop libpam-pwgen (see #511613).
    - Drop rgpsp (owner set to Debian QA Group and package doesn't seem
      to be that important for grml).
    - Drop windowlab (see #410618).
    - Drop workbone (see #429178).
  * Add check for valid Debian suite name to avoid breakage of sources.list
    if someone calls grml-live with a typo in the -s option.
  * Add exception for libewf1 and libstdc++2.10-glibc2.2 in
    /etc/grml/fai/config/scripts/GRMLBASE/40-deborphan.
  * buildd:
    - add support for building squeeze based ISOs.
    - add cronjob based on what the grml team is using at daily.grml.org
    - use '-a' instead of '-rltD' as rsync option to sync logs
    - use timestamp with hour, minute and second to match with FAI style
  * /etc/grml/fai/config/hooks/updatebase.GRMLBASE: install apt configuration
    also when updating the chroot (this happens if we have a base.tgz available